--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
